css/style1b26.css
/* ... */
 .form-option-label .radio-cir {
     position: absolute;
     display: block;
     background: #FFFFFF;
     height: 16px;
     width: 16px;
     left: 0px;
     top: 3px;
     display: block;
     text-align: center;
     border: 1px solid var(--border-color);
     border-radius: 50%;
     z-index: 2;
    /* -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     */
}
 input[type="radio"]:checked+.radio-cir {
     color: var(--sub-color);
     background: var(--sub-color);
     border: 1px solid var(--sub-color);
}
 .form-option-label .radio-cir:after {
     position: absolute;
     content: '';
     display: block;
     left: 5px;
     top: 5px;
     height: 4px;
     width: 4px;
     border-radius: 50%;
     background: var(--white-color);
}
 .form-option-label input[type="radio"]:checked+.radio-cir:after {
     background: var(--white-color);
}
 .form-option-label:hover input[type="radio"]+.radio-cir {
     background: var(--border-color);
}
 .form-option-label:hover input[type="radio"]:checked+.radio-cir {
     background: var(--sub-color);
}
 .form-option-label:hover input[type="radio"]+.radio-cir:after {
     background: var(--white-color);
}
 .form-select {
     position: relative;
     margin-bottom: 16px;
     background: #FFFFFF;
}
 .form-select select {
     height: 48px;
     opacity: 0;
}
 .content-form .form-select {
     margin-bottom: 24px;
}
 .form-select .selectric-wrapper {
     margin-left: -1px;
     margin-right: -1px;
}
 .form-select .control-label {
     position: absolute;
     z-index: 2;
     top: 4px!important;
     left: 16px!important;
     color: var(--grey-color);
     font-size: 12px;
     font-weight: 300;
}
 .form-select.col-sm-12 .control-label, .form-select.col-sm-6 .control-label {
     left: 28px!important;
    /* z-index: 100;
    */
}
 .form-select .selectric {
     border: none;
     background: none;
     border: 1px solid var(--border-color);
     border-radius: 5px;
}
 .form-select .selectric:hover {
     border: 1px solid #B2B2B2;
}
 .form-select .selectric-open.selectric-below .selectric {
     border-radius: 5px 5px 0px 0px;
     border: 1px solid #B2B2B2;
}
 .form-select .selectric-open.selectric-above .selectric {
     border-radius: 0px 0px 5px 5px;
     border: 1px solid #B2B2B2;
     border-top: 1px solid #FFFFFF;
}
 .selectric-open .selectric-items {
     background: #FFFFFF;
}
 .form-select .selectric .label {
     font-weight: 600;
     line-height: 24px;
     height: 46px;
     padding: 12px 0px 12px 16px;
     padding: 20px 16px 4px 16px;
     font-size: var(--input-font);
}
 .form-select .selectric .button {
     height: 48px;
     width: 40px;
     right: 0px;
     top: 0px;
     text-align: center;
}
 .form-select .selectric .button:after {
     text-align: center;
     top: 14px;
     color: var(--grey-color);
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
}
 .form-select .selectric-open .button:after {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
}
 .form-select.form-select-inline-label {
     position: relative;
}
 .form-control:disabled, .form-control[readonly] {
    /* background-color: #e9ecef;
    */
     background: none;
}
/* WRAPPER STYLES *****************************/
 #outer-wrapper {
     position: relative;
    /* overflow: hidden;
    */
}
 #bg-wrapper {
     position: fixed;
     content: '';
     display: none;
     opacity: 0;
     width: 100%;
     height: 100%;
     z-index: 0;
     background: var(--main-color);
}
 .menu-open #bg-wrapper {
     display: block;
     opacity: 1;
     -webkit-animation: opac-in-animate 0.5s ease-out forwards;
     animation: opac-in-animate 0.5s ease-out forwards;
}
 .menu-ani #bg-wrapper {
     display: block;
     opacity: 1;
     -webkit-animation: opac-out-animate 0.3s ease-in forwards;
     animation: opac-out-animate 0.3s ease-in forwards;
}
 #main-wrapper {
     position: relative;
}
 #content-wrapper {
     position: relative;
     display: block;
     background: #FFFFFF;
     z-index: 1;
     padding: 96px 0px;
     overflow: hidden;
}
 #content-wrapper2 {
     position: relative;
     display: block;
     background: #FFFFFF;
     z-index: 2;
     padding: 0px 0px;
     overflow: hidden;
     width: 100%;
     float: left;
     box-shadow: 0px 0px 30px 30px #000000ab;
}
 .home-wrap #content-wrapper {
     padding: 0;
}
 #content-wrapper.page-wrap {
     padding: 72px 0px;
}
 #content-wrapper.page-wrap:after {
     display: none!important;
}
/* HEADER *****************************/
 #navbar {
     position: absolute;
     display: block;
     width: 100%;
     padding: 12px 24px;
     top: 0px;
     z-index: 10;
     background: #FFFFFF;
}
 #navbar.sticky {
     position: fixed;
     box-shadow: 0px 1px 0px #E2E2E2;
     background: #FFFFFF;
}
 .home-wrap #navbar, .banner-page #navbar {
     background: none;
}
 .home-wrap #navbar.sticky, .banner-page #navbar.sticky {
     background: #FFFFFF;
}
 #navbar .container {
     padding: 0;
}
 .sub-page #navbar .container {
     padding: 0;
}
 .navbar-header {
     position: relative;
}
 .logo-main {
     display: inline-block;
     align-self: flex-start;
     margin: 12px 24px 12px 16px;
     margin: 10px 24px 10px 16px;
     padding: 0px;
}
 .logo-main img {
     height: 50px;
     width: auto;
}
 .logo-main span {
     position: relative;
     display: block;
}
 #navbar .logo-main-dark {
     display: none;
}
 #navbar.sticky .logo-main-dark {
     display: block;
}
 #navbar.sticky .logo-main-light {
     display: none;
}
 .logo-mob, .nav-back-btn, .nav-share-btn {
     display: none;
}
/* ... */

